Fix: Dark mode

--- a/src/styles.css
+++ b/src/styles.css
@@ -396,6 +396,10 @@ h3 {
   height: calc(100% - 50px);
 }
 
+textarea:focus {
+  background: hsl(0, 7%, 20%);
+}
+
 .md-txtarea {
   height: inherit;
 }
@@ -548,6 +552,7 @@ button[disabled]:hover {
   padding: 6px 12px;
 }
 
+/* WIP */
 .tooltiptext {
   visibility: hidden;
   width: 120px;
